Добавлен экран с поиском городов, реализован поиск с автоматическим запросом на сервер

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -16,4 +16,5 @@
     <string name="precipitation">PRECIPITATION</string>
     <string name="_0mm">0mm</string>
     <string name="none">--</string>
+    <string name="errorText">Can not load data. Please, check your internet connection.</string>
 </resources>
