--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,8 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
     <string name="weather">Weather</string>
+    <string name="errorText">Can not load data. Please, check your internet connection.</string>
+    <string name="city_placeholder">Start typing in a search bar to find a city.</string>
+    <string name="empty_result">No results matching your query</string>
+    <string name="error_unknown_on_download">Unexpected error while trying to fetch cities!</string>
 </resources>
