--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -39,4 +39,5 @@
     <string name="city_placeholder">Введите запрос в поле выше.</string>
     <string name="error_unknown_on_download">Непредвиденная ошибка при попытке обработать запрос.</string>
     <string name="delete">Удалить</string>
+    <string name="add">Добавить</string>
 </resources>
