--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="empty_result">No results matching your query</string>
     <string name="error_unknown_on_download">Unexpected error while trying to fetch cities!</string>
     <string name="delete">Delete</string>
+    <string name="add">Add</string>
 </resources>
