Теперь цвет фона подстраивается под время суток в городе, доработано отображение дня недели

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -40,4 +40,5 @@
     <string name="error_unknown_on_download">Непредвиденная ошибка при попытке обработать запрос.</string>
     <string name="delete">Удалить</string>
     <string name="add">Добавить</string>
+    <string name="today">Сегодня</string>
 </resources>
