--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,13 @@
     <string name="delete">Delete</string>
     <string name="add">Add</string>
     <string name="today">Today</string>
+    <string name="empty_list">You haven\'t added any cities.</string>
+    <string name="open_location" translatable="false">Open location</string>
+    <string name="current_location">Current location</string>
+    <string name="permission_dialog_explanation_text">To continue please grant access to locations</string>
+    <string name="permission_dialog_denied_text">This feature is not available without location permissions. Open app settings?</string>
+    <string name="dialog_positive_button">OK</string>
+    <string name="dialog_negative_button">Cancel</string>
+    <string name="location_city" translatable="false">Location city</string>
+    <string name="no_access">This feature is not available without location permission</string>
 </resources>
