--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -18,4 +18,7 @@
     <string name="none">--</string>
     <string name="errorText">Can not load data. Please, check your internet connection.</string>
     <string name="add">Add</string>
+    <string name="empty_list">You haven\'t added any cities.</string>
+    <string name="open_location">Open location</string>
+    <string name="current_location">Current location</string>
 </resources>
