--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -48,4 +48,5 @@
     <string name="dialog_negative_button">Отмена</string>
     <string name="dialog_positive_button">ОК</string>
     <string name="no_access">Эта функция неактивна без доступа к геолокации</string>
+    <string name="cancel">Отменить</string>
 </resources>
