Добавлена кнопка поделиться на фрагменте с погодой, изменена работа с геолокацией, добавлен показ ошибки если невозможно получить геолокацию

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -49,4 +49,6 @@
     <string name="dialog_positive_button">ОК</string>
     <string name="no_access">Эта функция неактивна без доступа к геолокации</string>
     <string name="cancel">Отменить</string>
+    <string name="share">Выберете приложение, чтобы поделиться</string>
+    <string name="noLocation">Невозможно определить геолокацию, пожалуйста, попробуйте позже</string>
 </resources>
